--- a/src/templates/tabs/valves/valves-free/valves-free.pug
+++ b/src/templates/tabs/valves/valves-free/valves-free.pug
@@ -15,28 +15,79 @@
         span Входит в <br> состав клиента
     .table__row
       .table__item
-        span 4C11AEB58BD0
+        span 7C11AEB58BD0
       .table__item
-        span Привязан
+        span Свободен
       .table__item
         span
       .table__item
         span 4C11AEB58930
       .table__item
-        span (298)yg@ekodar.com
+        span yg@ekodar.com
+      .table__item
+        span try
+    .table__row
+      .table__item
+        span 7C11AEB58BD0
+      .table__item
+        span Свободен
+      .table__item.tooltips-element
+        +transparentBtn('Действия')
+        .tooltip 
+          a(class="tooltip__link" href="#")
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
+      .table__item
+        span 2C11AEB58930
+      .table__item
+        span IMCyg@ekodar.com
+      .table__item
+        span try
+    .table__row
+      .table__item
+        span 3C11AEB58BD0
+      .table__item
+        span Свободен
+      .table__item.tooltips-element
+        +transparentBtn('Действия')
+        .tooltip 
+          a(class="tooltip__link" href="#")
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
+      .table__item
+        span 4C11AEB58930
+      .table__item
+        span 291yg@ekodar.com
       .table__item
         span try
     .table__row
       .table__item
         span 4C11AEB58BD0
       .table__item
-        span Привязан
+        span Свободен
       .table__item.tooltips-element
         +transparentBtn('Действия')
         .tooltip 
           a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
+      .table__item
+        span 4C11AEB58930
+      .table__item
+        span example@ekodar.com
+      .table__item
+        span try
+    .table__row
+      .table__item
+        span 4C11AEB58BD0
+      .table__item
+        span Свободен
+      .table__item.tooltips-element
+        +transparentBtn('Действия')
+        .tooltip 
+          a(class="tooltip__link" href="#")
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
       .table__item
         span 4C11AEB58930
       .table__item
@@ -47,13 +98,13 @@
       .table__item
         span 4C11AEB58BD0
       .table__item
-        span Привязан
+        span Свободен
       .table__item.tooltips-element
         +transparentBtn('Действия')
         .tooltip 
           a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
       .table__item
         span 4C11AEB58930
       .table__item
@@ -64,13 +115,13 @@
       .table__item
         span 4C11AEB58BD0
       .table__item
-        span Привязан
+        span Свободен
       .table__item.tooltips-element
         +transparentBtn('Действия')
         .tooltip 
           a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
       .table__item
         span 4C11AEB58930
       .table__item
@@ -81,64 +132,13 @@
       .table__item
         span 4C11AEB58BD0
       .table__item
-        span Привязан
+        span Свободен
       .table__item.tooltips-element
         +transparentBtn('Действия')
         .tooltip 
           a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
-      .table__item
-        span 4C11AEB58930
-      .table__item
-        span (298)yg@ekodar.com
-      .table__item
-        span try
-    .table__row
-      .table__item
-        span 4C11AEB58BD0
-      .table__item
-        span Привязан
-      .table__item.tooltips-element
-        +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
-      .table__item
-        span 4C11AEB58930
-      .table__item
-        span (298)yg@ekodar.com
-      .table__item
-        span try
-    .table__row
-      .table__item
-        span 4C11AEB58BD0
-      .table__item
-        span Привязан
-      .table__item.tooltips-element
-        +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
-      .table__item
-        span 4C11AEB58930
-      .table__item
-        span (298)yg@ekodar.com
-      .table__item
-        span try
-    .table__row
-      .table__item
-        span 4C11AEB58BD0
-      .table__item
-        span Привязан
-      .table__item.tooltips-element
-        +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
+            p Привязать к клиенту <br>
+          a(class="tooltip__link" href="#") Перейти к клапану
       .table__item
         span 4C11AEB58930
       .table__item
