--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -3,6 +3,7 @@
 @import './hamburger/hamburger.scss';
 @import './checkbox/checkbox.scss';
 @import './select/select.scss';
+@import './tooltip/tooltip.scss';
 @import './search/search.scss';
 @import './models/models.scss';
 @import './input/input.scss';
