--- a/src/templates/tabs/tabs.scss
+++ b/src/templates/tabs/tabs.scss
@@ -1,6 +1,7 @@
 .tab {
     &__container {
         padding: 40px 20px 40px 20px;
+        margin-bottom: 40px;
     }
     &-pane {
         display: none;
