--- a/src/templates/tabs/tabs.pug
+++ b/src/templates/tabs/tabs.pug
@@ -7,4 +7,4 @@
             .tab-pane.valves.active(data-tab-content='valves')
                 include ./valves/valves
             .tab-pane(data-tab-content='users')
-                include ./users/users
+                | Tab content 2
