--- a/src/templates/tabs/valves/valves-table/valves-table.pug
+++ b/src/templates/tabs/valves/valves-table/valves-table.pug
@@ -31,12 +31,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -48,12 +44,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -65,12 +57,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -82,12 +70,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -99,12 +83,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -116,12 +96,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
@@ -133,12 +109,8 @@
         span 4C11AEB58BD0
       .table__item
         span Привязан
-      .table__item.tooltips-element
+      .table__item
         +transparentBtn('Действия')
-        .tooltip 
-          a(class="tooltip__link" href="#")
-            p Перейти к клапану <br>
-          a(class="tooltip__link" href="#") Отвязать
       .table__item
         span 4C11AEB58930
       .table__item
