--- a/src/templates/tabs/valves/valves.pug
+++ b/src/templates/tabs/valves/valves.pug
@@ -14,4 +14,4 @@
             .valves__tab-pane.active(data-tab-content='all')
                 include ./valves-table/valves-table
             .valves__tab-pane(data-tab-content='free')
-                include ./valves-free/valves-free
+                | Tab content Free
