add new tables for a users component

--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,5 +1,6 @@
 @import './transparent-btn/transparent-btn.scss';
 @import './checkNumber/checkNumber.scss';
+@import './breadcrumbs/breadcrumbs.scss';
 @import './hamburger/hamburger.scss';
 @import './checkbox/checkbox.scss';
 @import './select/select.scss';
