--- a/src/templates/styles.scss
+++ b/src/templates/styles.scss
@@ -1,3 +1,6 @@
 @import './header/header.scss';
 @import './tabs/tabs.scss';
 @import './tabs/valves/valves.scss';
+@import './tabs/users/users.scss';
+@import './tabs/users/users.scss';
+@import './tabs/users/users-table/users-table.scss';
