--- a/src/templates/tabs/valves/valves.pug
+++ b/src/templates/tabs/valves/valves.pug
@@ -12,6 +12,6 @@
                 
         .valves__tab-content
             .valves__tab-pane.active(data-tab-content='all')
-                include ./valves-table/valves-table
+                include ./all-table/all-table
             .valves__tab-pane(data-tab-content='free')
-                | Tab content Free
+                include ./free-table/free-table
