--- a/src/templates/tabs/tabs.pug
+++ b/src/templates/tabs/tabs.pug
@@ -4,7 +4,8 @@
             a.nav-tab.active(href='#', data-tab='valves') Клапаны
             a.nav-tab(href='#', data-tab='users') Пользователи
         .tab-content
+        include /components/breadcrumbs/breadcrumbs
             .tab-pane.valves.active(data-tab-content='valves')
                 include ./valves/valves
-            .tab-pane(data-tab-content='users')
-                | Tab content 2
+            .tab-pane.users(data-tab-content='users')
+                include ./users/users
