--- a/src/components/transparent-btn/transparent-btn.pug
+++ b/src/components/transparent-btn/transparent-btn.pug
@@ -1,5 +1,8 @@
+mixin transparentBtn(title)
+    button(class="transparent__btn")= title
+
 mixin transparentBtn__action(title)
     button(class="transparent__btn transparent__btn-action")= title
 
-mixin transparentBtn(title)
-    button(class="transparent__btn")= title
+mixin transparentBtnProfile(title)
+    button(class="transparent__btn client-profile__transparent-btn")= title
