--- a/src/templates/styles.scss
+++ b/src/templates/styles.scss
@@ -4,3 +4,5 @@
 @import './tabs/users/users.scss';
 @import './tabs/users/users.scss';
 @import './tabs/users/users-table/users-table.scss';
+@import './templates/client-profile/client-profile.scss';
+@import './templates/valve-controller/valve-controller.scss';
