--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -100,7 +100,7 @@
         }
     }
     &__block {
-        width: calc(100% / 2 - 10px);
+        width: 100%;
         &.--links {
             display: flex;
         }
@@ -120,8 +120,8 @@
     }
     &__textarea {
         max-height: 100%;
-        height: 160px;
-        margin: 20px 0px 20px;
+        height: 120px;
+        margin: 35px 0px 25px;
     }
     &__input {
         & + & {
