--- a/src/templates/tabs/valves/valves.scss
+++ b/src/templates/tabs/valves/valves.scss
@@ -9,10 +9,18 @@
             display: flex;
             justify-content: space-between;
             align-items: baseline;
+            @media(max-width: $tabletWide) {
+                flex-direction: column-reverse;
+                align-items: center;
+            }
         }
         &-title {
             font-weight: 100;
             margin-bottom: 30px;
+            @media(max-width: $phone) {
+                font-size: 25px;
+                text-align: center;
+            }
         }
         &-start {
             display: flex;
@@ -32,6 +40,10 @@
             width: 140px;
             transition: $transition;
             text-align: center;
+            @media(max-width: $phone) {
+                padding: 10px 15px 10px 15px;
+                width: 120px;
+            }
             &:first-child {
                 position: relative;
                 z-index: 1;
