add filter-tabs new sections

--- a/src/templates/tabs/tabs.pug
+++ b/src/templates/tabs/tabs.pug
@@ -17,6 +17,7 @@
                 include ../client-profile/client-profile
             
             //- Здесь лежит контроллер для клапана
+            h2.valve-controller__title Система очистки воды
             .tab-pane.active.users.valve-controller__tab(data-tab-content='users')
                 include ../valve-controller/valve-controller
             
