--- a/src/templates/valve-controller/valve-controller.scss
+++ b/src/templates/valve-controller/valve-controller.scss
@@ -1,5 +1,120 @@
+
+@import './filter-tabs/filter-tabs.scss';
+
 .valve-controller {
+    &__title {
+        font-weight: 300;
+        font-size: 30px;
+        margin: 30px 0px 70px;
+    }
     &__tab {
-        margin-top: 50px;
+    }
+    &__container {
+        position: relative;
+    }
+    &__tabs-system {
+        &__first,
+        &__two {
+            cursor: pointer;
+            &::after {
+                content: "";
+                position: absolute;
+                z-index: -1;
+                width: 160px;
+                height: 50px;
+                border-radius: 3px;
+                background-color: #f6f6f8;
+                transition: $transition;
+            }
+            &.--active {
+                & span {
+                    color: $black;
+                }
+                &::after {
+                    background-color: $white;
+                }   
+            }
+        }
+        &__first {
+            & span {
+                color: $main_tabs;
+                white-space: nowrap;
+                position: absolute;
+                left: 8px;
+                top: -62px;
+            }
+            &::after {
+                top: -75px;
+                left: -30px;
+            }
+        }
+        &__two {
+             & span {
+                color: $main_tabs;
+                white-space: nowrap;
+                position: absolute;
+                top: -62px;
+                left: 180px;
+            }
+            &::after {
+                top: -75px;
+                left: 140px;
+            }
+        }
+    }
+    &__header {
+        &-tabs {
+            display: flex;
+            align-items: center;
+        }
+        &-title {
+            margin-right: 40px;
+            font-weight: 300;
+            font-size: 26px;
+        }
+    }
+    &__nav {
+        &-tabs {
+            display: flex;
+            align-items: center;
+        }
+        &-tab {
+            background-color: #ebecf0;
+            color: #939bb0;
+            padding: 12px 25px 12px 25px;
+            border-radius: 4px;
+            width: 140px;
+            transition: $transition;
+            text-align: center;
+            @media(max-width: $phone) {
+                padding: 10px 15px 10px 15px;
+                width: 120px;
+            }
+            &:first-child {
+                position: relative;
+                z-index: 1;
+            }
+            &:last-child {
+                position: relative;
+                z-index: 0;
+                margin-left: -6px;
+            }
+            &:hover {
+                color: white;
+                background-color: $btn-blue;
+            }
+            &.active {
+                color: white;
+                background-color: $btn-blue;
+            }
+        }
+    }
+    &__tab-pane {
+        width: 100%;
+        display: none;
+        padding-top: 35px;
+        &.active {
+            display: block;
+        }
     }
 }
