add filter-tabs new sections

--- a/src/templates/valve-controller/filter-tabs/information/information.pug
+++ b/src/templates/valve-controller/filter-tabs/information/information.pug
@@ -1,1 +1,57 @@
-1
+#tech.models__tech
+  .table
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span MAC
+      .table__item.information__table-item
+        span 4C11AEB58930
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Тип системы
+      .table__item.information__table-item
+        span Умягчение
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Полный ресурс, м<sup>3</sup>
+      .table__item.information__table-item
+        span 3.3333
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Жесткость исходной воды, мг-экв/л
+      .table__item.information__table-item
+        span 6
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span 17:20
+      .table__item.information__table-item
+        span Текущий расход воды, м<sup>3</sup>/ч
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Оставшийся ресурс, м<sup>3</sup>
+      .table__item.information__table-item
+        span 1.26
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Объем очищенной воды после последней промывки, м<sup>3</sup>
+      .table__item.information__table-item
+        span 0.000
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Число дней после последней промывки
+      .table__item.information__table-item
+        span 5.972
+    .table__row.information__table-row
+      .table__item.information__table-item
+        span Максимальная скорость потока воды за последние 7 дней, м<sup>3</sup>/ч
+      .table__item.information__table-item
+        span 0
+.models__tech-scroll
+  .pseudo-scroll
+    .pseudo-scroll__line
+      .pseudo-scroll__line-active
+    .pseudo-scroll__arrow.--prev
+      svg(xmlns='http://www.w3.org/2000/svg', width='8', height='14', viewbox='0 0 8 14')
+        path(d='M1597.71,1516.68l-6.04,6.03a0.972,0.972,0,0,1-1.39,0,0.99,0.99,0,0,1,0-1.39l5.35-5.33-5.35-5.34a0.983,0.983,0,1,1,1.39-1.39l6.04,6.03a1.019,1.019,0,0,1,.29.7A0.978,0.978,0,0,1,1597.71,1516.68Z', transform='translate(-1590 -1508.97)')
+    .pseudo-scroll__arrow.--next
+      svg(xmlns='http://www.w3.org/2000/svg', width='8', height='14', viewbox='0 0 8 14')
+        path(d='M1597.71,1516.68l-6.04,6.03a0.972,0.972,0,0,1-1.39,0,0.99,0.99,0,0,1,0-1.39l5.35-5.33-5.35-5.34a0.983,0.983,0,1,1,1.39-1.39l6.04,6.03a1.019,1.019,0,0,1,.29.7A0.978,0.978,0,0,1,1597.71,1516.68Z', transform='translate(-1590 -1508.97)')
