--- a/src/templates/valve-controller/valve-controller.scss
+++ b/src/templates/valve-controller/valve-controller.scss
@@ -2,6 +2,7 @@
 @import './filter-tabs/filter-tabs.scss';
 
 .valve-controller {
+    width: 100%;
     &__title {
         font-weight: 300;
         font-size: 30px;
