--- a/src/templates/valve-controller/filter-tabs/filter-tabs.scss
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.scss
@@ -10,13 +10,30 @@
 
     }
     &__nav-tab {
+        margin-bottom: 20px;
         cursor: pointer;
         color: $main_tabs;
         margin-right: 30px;
+        transition: $transition;
+        position: relative;
         &:last-child {
             margin-right: 0px;
         }
         &.active {
+            transition: $transition;
+            color: $black;
+            &::after {
+                background-color: $btn-blue;
+                position: absolute;
+                content: '';
+                bottom: -25px;
+                left: 0;
+                z-index: 1;
+                width: 100%;
+                height: 2px;
+            }
+        }
+        &:hover {
             color: $black;
         }
     }
