add new sections

--- a/src/templates/valve-controller/filter-tabs/filter-tabs.pug
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.pug
@@ -14,6 +14,7 @@
             .filter-tabs__tab-pane(data-tab-content='statistics')
                 include ./statistics/statistics
             .filter-tabs__tab-pane(data-tab-content='flushing')
+                h2.filter-tabs__title-item Промывка фильтра
                 include ./flushing/flushing
             .filter-tabs__tab-pane(data-tab-content='customization')
                 include ./customization/customization
