--- a/src/templates/valve-controller/valve-controller.scss
+++ b/src/templates/valve-controller/valve-controller.scss
@@ -114,6 +114,7 @@
         width: 100%;
         display: none;
         padding-top: 35px;
+        overflow: hidden;
         &.active {
             display: block;
         }
