--- a/src/templates/valve-controller/filter-tabs/filter-tabs.scss
+++ b/src/templates/valve-controller/filter-tabs/filter-tabs.scss
@@ -7,7 +7,22 @@
 
 .filter-tabs {
     &__container {
-
+    }
+    &__nav-tabs{
+        position: relative;
+        &::after {
+            position: absolute;
+            top: 45px;
+            left: 0px;
+            content: "";
+            width: 100%;
+            height: 1px;
+            background-color: #e0e0e7;
+        }
+    }
+    &__title-item {
+        margin: 15px 0px 10px;
+        font-weight: 300;
     }
     &__nav-tab {
         margin-bottom: 20px;
@@ -19,18 +34,25 @@
         &:last-child {
             margin-right: 0px;
         }
+        &::after {
+            transition: $transition;
+            background-color: $btn-blue;
+            position: absolute;
+            content: '';
+            bottom: -25px;
+            left: 0;
+            z-index: 1;
+            width: 100%;
+            height: 2px;
+            opacity: 0;
+            transform: translateX(-95px);
+        }
         &.active {
             transition: $transition;
             color: $black;
             &::after {
-                background-color: $btn-blue;
-                position: absolute;
-                content: '';
-                bottom: -25px;
-                left: 0;
-                z-index: 1;
-                width: 100%;
-                height: 2px;
+                transform: translateX(0px);
+                opacity: 1;
             }
         }
         &:hover {
