--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -1,14 +1,34 @@
 .chart {
     &__container {
-        width: 100%;
         display: flex;
-        align-items: center;
         justify-content: space-between;
+        align-items: center;
+        &:first-child {
+            margin-bottom: 45px;
+        }
+        @media(max-width: $tablet) {
+            flex-direction: column;
+        }
     }
     &__left {
-        width: 60%;
+        width: 50%;
+        @media(max-width: $tablet) {
+            width: 100%;
+            margin-bottom: 30px;
+        }
     }
     &__right {
-        width: 30%;
+        width: 50%;
+        @media(max-width: $tablet) {
+            width: 40%;
+        }
+        @media(max-width: $phone) {
+            width: 70%;
+        }
     }
+    &__title {
+        font-weight: 300;
+        margin-bottom: 25px;
+    }
+
 }
