add new sections

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -1,3 +1,4 @@
+include ./customization-input/customization-input
 include ./transparent-btn/transparent-btn
 include ./hamburger/hamburger
 include ./checkbox/checkbox
