--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -1,19 +1,18 @@
-@import './transparent-btn/transparent-btn.scss';
-@import './checkNumber/checkNumber.scss';
-@import './checkbox/checkbox.scss';
-@import './breadcrumbs/breadcrumbs.scss';
-@import './hamburger/hamburger.scss';
-@import './checkbox/checkbox.scss';
-@import './tooltip/tooltip.scss';
-@import './select/select.scss';
-@import './search/search.scss';
-@import './avatar/avatar.scss';
-@import './models/models.scss';
-@import './input/input.scss';
-@import './input/input.scss';
-@import './table/table.scss';
-@import './chart/chart.scss';
-@import './form/form.scss';
-@import './btn/btn.scss';
-
-
+@import "./customization-input/customization-input.scss";
+@import "./transparent-btn/transparent-btn.scss";
+@import "./checkNumber/checkNumber.scss";
+@import "./checkbox/checkbox.scss";
+@import "./breadcrumbs/breadcrumbs.scss";
+@import "./hamburger/hamburger.scss";
+@import "./checkbox/checkbox.scss";
+@import "./tooltip/tooltip.scss";
+@import "./select/select.scss";
+@import "./search/search.scss";
+@import "./avatar/avatar.scss";
+@import "./models/models.scss";
+@import "./input/input.scss";
+@import "./input/input.scss";
+@import "./table/table.scss";
+@import "./chart/chart.scss";
+@import "./form/form.scss";
+@import "./btn/btn.scss";
