--- a/src/templates/valve-controller/filter-tabs/flushing/flushing.pug
+++ b/src/templates/valve-controller/filter-tabs/flushing/flushing.pug
@@ -20,3 +20,5 @@
     .pseudo-scroll__arrow.--next
       svg(xmlns='http://www.w3.org/2000/svg', width='8', height='14', viewbox='0 0 8 14')
         path(d='M1597.71,1516.68l-6.04,6.03a0.972,0.972,0,0,1-1.39,0,0.99,0.99,0,0,1,0-1.39l5.35-5.33-5.35-5.34a0.983,0.983,0,1,1,1.39-1.39l6.04,6.03a1.019,1.019,0,0,1,.29.7A0.978,0.978,0,0,1,1597.71,1516.68Z', transform='translate(-1590 -1508.97)')
+
+include ./flushing-pagination/flushing-pagination
