--- a/src/components/chart-first/chart-first.pug
+++ b/src/components/chart-first/chart-first.pug
@@ -3,6 +3,6 @@
         .chart__left 
             h2.chart__title Расход воды, л/мин
             canvas(id="chart-warer-flow")
-        .chart__right
+        .chart__right.--resource
             h2.chart__title Оставшийся ресурс
             canvas(id="chart-resource")
