--- a/src/components/chart/chart.scss
+++ b/src/components/chart/chart.scss
@@ -11,24 +11,31 @@
         }
     }
     &__left {
-        width: 50%;
+        width: 47%;
         @media(max-width: $tablet) {
             width: 100%;
             margin-bottom: 30px;
         }
     }
     &__right {
-        width: 50%;
+        width: 47%;
         @media(max-width: $tablet) {
-            width: 40%;
+            width: 100%;
         }
-        @media(max-width: $phone) {
-            width: 70%;
+        &.--resource {
+            width: 30%;
+            @media(max-width: $tablet) {
+                width: 55%;
+            }
         }
     }
     &__title {
         font-weight: 300;
         margin-bottom: 25px;
+        @media(max-width: $tablet) {
+            font-size: 18px;
+            text-align: center;
+        }
     }
 
 }
