--- a/src/templates/valve-controller/filter-tabs/statistics/statistics.scss
+++ b/src/templates/valve-controller/filter-tabs/statistics/statistics.scss
@@ -1,10 +1,20 @@
-.statistics {
+.statistics, .interval {
+    &__title {
+        font-weight: 300;
+        margin: 20px 0 25px;
+    }
      &__nav {
         &-tabs {
             display: flex;
             align-items: center;
+            &.second {
+                margin-bottom: 25px;
+            }
         }
         &-tab {
+            margin-right: -6px;
+            border: 1px solid #e1e2e7;
+            border-right: 1px solid #e1e2e7;
             background-color: #ebecf0;
             color: #939bb0;
             padding: 12px 25px 12px 25px;
@@ -23,7 +33,6 @@
             &:last-child {
                 position: relative;
                 z-index: 0;
-                margin-left: -6px;
             }
             &:hover {
                 color: white;
@@ -38,7 +47,7 @@
     &__tab-pane {
         width: 100%;
         display: none;
-        padding-top: 35px;
+        padding-top: 0px;
         overflow: hidden;
         &.active {
             display: block;
