--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -17,7 +17,8 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-ul, ol {
+ul,
+ol {
 	margin: 0;
 	padding: 0;
 
@@ -40,7 +41,12 @@ img {
 	vertical-align: top;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	margin: 0;
 }
 
@@ -73,7 +79,7 @@ button {
 	font-size: 16px;
 	line-height: 1;
 	background: none;
-	transition: transform .3s;
+	transition: transform 0.3s;
 	cursor: pointer;
 	&:active {
 		transform: translate(2px, 2px);
@@ -97,7 +103,6 @@ button {
 }
 
 .main {
-
 }
 
 .container {
