--- a/src/templates/valve-controller/filter-tabs/customization/customization.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/customization.pug
@@ -11,7 +11,7 @@
                 include ./general/general  
                 
             .customization__tab-pane(data-tab-content='сonfiguration')
-                p Конфигурация
+                include ./сonfiguration/сonfiguration  
 
             .customization__tab-pane(data-tab-content='systemSetup')
                 p Настройка системы
