--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -1,12 +1,13 @@
 .form {
     &__select {
         position: relative;
-        & + &, & + .form__label {
+        & + &,
+        & + .form__label {
             margin-top: 18px;
         }
         &.--active {
             & .form__select-head:after {
-                transform: translateY(-50%) rotate3d(0,0,1,-45deg);
+                transform: translateY(-50%) rotate3d(0, 0, 1, -45deg);
             }
             & .form__select-list {
                 opacity: 1;
@@ -32,31 +33,30 @@
             position: relative;
             width: 100%;
             max-width: 100%;
-            padding: 14px 0px 17px 25px;       
+            padding: 14px 0px 17px 25px;
             font-size: 16px;
             line-height: 18px;
             color: $text_grayL;
             border-radius: 4px;
             border: 1px solid $border;
             background-color: $white;
-            transition: border-color $transition,background-color $transition;
+            transition: border-color $transition, background-color $transition;
             cursor: text;
-            @media(max-width: 767px) {
-                
+            @media (max-width: 767px) {
             }
             &::after {
-                content: '';
+                content: "";
                 display: block;
                 width: 10px;
                 height: 10px;
                 position: absolute;
                 top: 50%;
                 right: 0;
-                z-index: 999;
+                z-index: 1;
                 margin-right: 20px;
                 border-top: 1px solid #b2bdcc;
                 border-right: 1px solid #b2bdcc;
-    
+
                 -webkit-transform: translateY(-50%) rotate3d(0, 0, 1, 135deg);
                 transform: translateY(-50%) rotate3d(0, 0, 1, 135deg);
                 -webkit-transition: -webkit-transform 0.3s ease;
@@ -78,10 +78,10 @@
             border-radius: 4px;
             background-color: #fff;
             opacity: 0;
-            transform: translate3d(0,20px,0);
-            transition: transform $transition,opacity $transition;
+            transform: translate3d(0, 20px, 0);
+            transition: transform $transition, opacity $transition;
             box-shadow: $shadow;
-            will-change: opacity,transform;
+            will-change: opacity, transform;
             pointer-events: none;
             cursor: pointer;
             z-index: 10;
@@ -93,7 +93,7 @@
             letter-spacing: 0;
             color: #333;
 
-            padding: 14px 0px 17px 25px;       
+            padding: 14px 0px 17px 25px;
             border-top: 1px solid $bg_gray;
             transition: background-color $transition;
             &:hover {
@@ -102,4 +102,3 @@
         }
     }
 }
-
