--- a/src/templates/styles.scss
+++ b/src/templates/styles.scss
@@ -11,3 +11,4 @@
 @import "./templates/valve-controller/filter-tabs/flushing/flushing-pagination/flushing-pagination.scss";
 @import "./templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.scss";
 @import "./templates/valve-controller/filter-tabs/customization/general/general-pagination/general-pagination.scss";
+@import "./templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.scss";
