--- a/src/templates/valve-controller/valve-controller.scss
+++ b/src/templates/valve-controller/valve-controller.scss
@@ -1,5 +1,4 @@
-
-@import './filter-tabs/filter-tabs.scss';
+@import "./filter-tabs/filter-tabs.scss";
 
 .valve-controller {
     width: 100%;
@@ -33,7 +32,7 @@
                 }
                 &::after {
                     background-color: $white;
-                }   
+                }
             }
         }
         &__first {
@@ -50,7 +49,7 @@
             }
         }
         &__two {
-             & span {
+            & span {
                 color: $main_tabs;
                 white-space: nowrap;
                 position: absolute;
@@ -87,7 +86,7 @@
             width: 140px;
             transition: $transition;
             text-align: center;
-            @media(max-width: $phone) {
+            @media (max-width: $phone) {
                 padding: 10px 15px 10px 15px;
                 width: 120px;
             }
@@ -114,7 +113,7 @@
         width: 100%;
         display: none;
         padding-top: 35px;
-        overflow: hidden;
+        // overflow: hidden;
         &.active {
             display: block;
         }
