--- a/src/templates/styles.scss
+++ b/src/templates/styles.scss
@@ -12,3 +12,4 @@
 @import "./templates/valve-controller/filter-tabs/customization/general/customization-info/customization-info.scss";
 @import "./templates/valve-controller/filter-tabs/customization/general/general-pagination/general-pagination.scss";
 @import "./templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.scss";
+@import "./templates/valve-controller/filter-tabs/customization/system-setup/system-setup-pagination/system-setup-pagination.scss";
