--- a/src/templates/valve-controller/filter-tabs/customization/customization.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/customization.pug
@@ -14,7 +14,7 @@
                 include ./сonfiguration/сonfiguration  
 
             .customization__tab-pane(data-tab-content='systemSetup')
-                p Настройка системы
+                include ./system-setup/system-setup  
 
             .customization__tab-pane(data-tab-content='installerSetup')
                 p Настройка монтажника
